--- a/linux-io-uring.cabal
+++ b/linux-io-uring.cabal
@@ -15,6 +15,14 @@ extra-source-files:  CHANGELOG.md
 
 library
   exposed-modules:     System.Linux.IO.URing
+  other-modules:
+                       System.Linux.IO.URing.Cqe
+                       System.Linux.IO.URing.PollEvent
+                       System.Linux.IO.URing.Ring
+                       System.Linux.IO.URing.Sqe
+  hs-source-dirs:      src
+  include-dirs:        include
+  ghc-options:         -Wall
   build-depends:       base >=4.12 && <4.13
   other-extensions:    RecordWildCards, DataKinds
   default-language:    Haskell2010
@@ -24,5 +32,4 @@ executable io-uring
   -- other-modules:
   -- other-extensions:
   build-depends:       base >=4.12 && <4.13
-  -- hs-source-dirs:
   default-language:    Haskell2010
