--- a/linux-io-uring.cabal
+++ b/linux-io-uring.cabal
@@ -15,22 +15,25 @@ extra-source-files:  CHANGELOG.md
 
 library
   exposed-modules:     System.Linux.IO.URing
-  other-modules:
+  -- other-modules:
                        System.Linux.IO.URing.Cqe
                        System.Linux.IO.URing.PollEvent
+                       System.Linux.IO.URing.IoVec
                        System.Linux.IO.URing.Ring
                        System.Linux.IO.URing.Sqe
   hs-source-dirs:      src
   c-sources:           cbits/hs_uring.c
+                       cbits/syscall.c
   include-dirs:        include
   ghc-options:         -Wall
-  build-depends:       base >=4.12 && <4.13
+  build-depends:       base >=4.12 && <4.16
   other-extensions:    RecordWildCards, DataKinds
   default-language:    Haskell2010
 
 executable io-uring
   main-is:             Main.hs
-  -- other-modules:
-  -- other-extensions:
-  build-depends:       base >=4.12 && <4.13
+  build-depends:       base >=4.12 && <4.16,
+                       bytestring,
+                       unix,
+                       linux-io-uring
   default-language:    Haskell2010
