--- a/linux-io-uring.cabal
+++ b/linux-io-uring.cabal
@@ -15,7 +15,6 @@ extra-source-files:  CHANGELOG.md
 
 library
   exposed-modules:     System.Linux.IO.URing
-  -- other-modules:
                        System.Linux.IO.URing.Cqe
                        System.Linux.IO.URing.PollEvent
                        System.Linux.IO.URing.IoVec
@@ -28,7 +27,7 @@ library
                        cbits/syscall.c
   cmm-sources:         cbits/barriers.cmm
   include-dirs:        include
-  ghc-options:         -Wall
+  ghc-options:         -Wall -ddump-to-file -ddump-simpl -dsuppress-ticks -dsuppress-idinfo
   build-depends:       base >=4.12 && <4.16
   other-extensions:    RecordWildCards, DataKinds
   default-language:    Haskell2010
