--- a/linux-io-uring.cabal
+++ b/linux-io-uring.cabal
@@ -39,5 +39,5 @@ executable io-uring
                        bytestring,
                        unix,
                        linux-io-uring
-  ghc-options:         -rtsopts -with-rtsopts=-V0
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-V0 -with-rtsopts=-N2
   default-language:    Haskell2010
