--- a/linux-io-uring.cabal
+++ b/linux-io-uring.cabal
@@ -41,3 +41,14 @@ executable io-uring
                        linux-io-uring
   ghc-options:         -threaded -rtsopts -with-rtsopts=-V0 -with-rtsopts=-N2
   default-language:    Haskell2010
+
+executable segfault
+  main-is: Segfault.hs
+  build-depends:       base >=4.12 && <4.16,
+                       bytestring,
+                       unix,
+                       network,
+                       containers,
+                       linux-io-uring
+  ghc-options:         -threaded -rtsopts -debug
+  default-language:    Haskell2010
